--- a/other/html/body-pix.html
+++ b/other/html/body-pix.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Getting Started with ml5.js</title>
+
  <!-- p5 -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
@@ -10,6 +11,6 @@
  <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>  </head>
 
   <body>
-    <script src="app.js"></script>
+    <script src="body-pix.js"></script>
   </body>
 </html>
