--- a/classifier/classifier.html
+++ b/classifier/classifier.html
@@ -11,6 +11,6 @@
  <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>  </head>
 
   <body>
-    <script src="body-pix.js"></script>
+    <script src="image-classifier.js"></script>
   </body>
 </html>
